--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "directories": {
     "example": "examples",
-    "test": "test"
+    "test": "compiler.test.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "c8 node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/ImperatorSmugleaf/pandemonium/issues"
   },
-  "homepage": "https://github.com/ImperatorSmugleaf/pandemonium#readme"
+  "homepage": "https://github.com/ImperatorSmugleaf/pandemonium#readme",
+  "dependencies": {
+    "c8": "^7.11.0",
+    "mocha": "^9.2.0"
+  }
 }
