--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/ImperatorSmugleaf/pandemonium#readme",
   "dependencies": {
     "c8": "^7.11.0",
-    "mocha": "^9.2.0"
+    "mocha": "^9.2.0",
+    "ohm-js": "^16.3.0"
   }
 }
